--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library(NHE SHARED
         renders/2D/mod.h
         )
 
-add_subdirectory(renders/2D/terminal)
+
 target_include_directories(NHE PUBLIC tools)
 # TODO: Remove const from engine
 target_include_directories(NHE PRIVATE ../globals)
@@ -27,4 +27,9 @@ target_include_directories(NHE PRIVATE ../globals)
 set_target_properties(NHE PROPERTIES PUBLIC_HEADER engine.h)
 
 # Build with terminal graphics
-target_link_libraries(NHE Term-graphics)
+# add_subdirectory(renders/2D/terminal)
+# target_link_libraries(NHE Term-graphics)
+
+# Build with sdl
+add_subdirectory(renders/2D/sdl)
+target_link_libraries(NHE SDL-graphics)
