--- a/renders/2D/sdl/CMakeLists.txt
+++ b/renders/2D/sdl/CMakeLists.txt
@@ -3,19 +3,18 @@ project(SDL-graphics C)
 
 set(CMAKE_C_STANDARD 11)
 
-
 add_library(SDL-graphics STATIC
         Render.c
         Texture.c Texture.h
         init_sdl.c
         )
-#find_package(SDL2)
-include(FindPkgConfig)
-#
-PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
-PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED sdl2_image)
-INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
-target_link_libraries(SDL-graphics ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
+
+if(EMSCRIPTEN)
+    target_compile_options(SDL-graphics PRIVATE -sUSE_SDL=2 -sUSE_SDL_IMAGE=2)
+    target_link_options(SDL-graphics PUBLIC -sUSE_SDL=2 -sUSE_SDL_IMAGE=2)
+else()
+    target_link_libraries(SDL-graphics ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
+endif()
 
 target_include_directories(SDL-graphics PRIVATE ../base)
 target_include_directories(SDL-graphics PUBLIC ../../../tools)
