changed asset image format

--- a/renders/2D/sdl/CMakeLists.txt
+++ b/renders/2D/sdl/CMakeLists.txt
@@ -13,7 +13,7 @@ if(EMSCRIPTEN)
     target_compile_options(SDL-graphics PUBLIC -sUSE_SDL=2 -sUSE_SDL_IMAGE=2)
     target_compile_options(SDL-graphics PUBLIC -O3)
     target_link_options(SDL-graphics PUBLIC -sUSE_SDL=2 -sUSE_SDL_IMAGE=2 -sASYNCIFY)
-    target_link_options(SDL-graphics PUBLIC -sSDL2_IMAGE_FORMATS=["png"] -sGL_UNSAFE_OPTS=0)
+    target_link_options(SDL-graphics PUBLIC -sSDL2_IMAGE_FORMATS=["tga"])
     target_link_options(SDL-graphics PUBLIC -O3)
 else()
     target_link_libraries(SDL-graphics ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
