--- a/renders/2D/terminal/CMakeLists.txt
+++ b/renders/2D/terminal/CMakeLists.txt
@@ -16,9 +16,9 @@ target_include_directories(Term-graphics PRIVATE ../base)
 target_include_directories(Term-graphics PUBLIC ../../../tools)
 
 IF (WIN32)
-    target_sources(Term-graphics PUBLIC win/init_term.c  ascii_colors.h)
-    target_include_directories(Term-graphics PUBLIC win)
+    target_sources(Term-graphics PRIVATE win/init_term.c  ascii_colors.h)
+    target_include_directories(Term-graphics PRIVATE win)
 ELSE()
-    target_sources(Term-graphics PUBLIC linx/init_term.c  linx/ascii_colors.h)
-    target_include_directories(Term-graphics PUBLIC linx)
+    target_sources(Term-graphics PRIVATE linx/init_term.c  linx/ascii_colors.h)
+    target_include_directories(Term-graphics PRIVATE linx)
 ENDIF()
