terminal textures now can scale

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,9 @@ target_include_directories(NHE PRIVATE ../globals)
 set_target_properties(NHE PROPERTIES PUBLIC_HEADER engine.h)
 
 # Build with terminal graphics
-# add_subdirectory(renders/2D/terminal)
-# target_link_libraries(NHE Term-graphics)
+ add_subdirectory(renders/2D/terminal)
+ target_link_libraries(NHE Term-graphics)
 
 # Build with sdl
-add_subdirectory(renders/2D/sdl)
-target_link_libraries(NHE SDL-graphics)
+#add_subdirectory(renders/2D/sdl)
+#target_link_libraries(NHE SDL-graphics)
