--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ add_library(NHE SHARED
         renders/2D/base/TextureStorage.c
         renders/2D/base/View.c
         renders/2D/mod.h
-        )
+        events/Event.c events/Event.h events/event_loop.c events/event_loop.h events/EventPool.c events/EventPool.h)
 
 
 target_include_directories(NHE PUBLIC tools)
