custom events now working for sdl without arguments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,15 @@ add_library(NHE SHARED
         renders/2D/base/Screen.c
         renders/2D/base/TextureStorage.c
         renders/2D/base/View.c
+#        renders/2D/base/Texture.h
         renders/2D/mod.h
-        events/Event.c events/Event.h events/event_loop.c events/event_loop.h events/EventPool.c events/EventPool.h)
+
+        events/Event.c events/Event.h
+        events/event_loop.c events/event_loop.h
+        events/EventPool.c events/EventPool.h
+        events/ListeningTable.c events/ListeningTable.h
+        events/mod.h
+        events/event_provider.h)
 
 
 target_include_directories(NHE PUBLIC tools)
