--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(NHE C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_library(NHE SHARED
+add_library(NHE STATIC#SHARED
         tools/List.c tools/List.h
         tools/2DArray.c tools/2DArray.h
         tools/serializer.c tools/serializer.h
@@ -28,7 +28,7 @@ add_library(NHE SHARED
         events/EventCallback.c events/EventCallback.h
         events/PackedFunction.c events/PackedFunction.h
         events/mod.h events/mod_pub.h
-        events/mod_init.h events/mod_init.c)
+        events/mod_init.h events/mod_init.c geometry/mod_pub.h)
 
 target_include_directories(NHE PUBLIC tools)
 # TODO: Remove const from engine
